<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".Views.ProjectDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/mUser"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:src="@drawable/ic_camera"
                    android:tint="@color/iconTintColor" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha=".4"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/projectNameTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/earthquake_information"
                        android:textColor="@color/headline_color"
                        android:textSize="19sp"
                        android:textStyle="bold|normal" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:alpha=".4"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/needleSizeTv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/needle_size"
                            android:textColor="@color/para_colors"
                            android:textSize="16sp"
                            android:textStyle="bold|normal" />

                        <TextView
                            android:id="@+id/hookSizeTv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/hook_size"
                            android:textColor="@color/para_colors"
                            android:textSize="16sp"
                            android:textStyle="bold|normal" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:alpha=".4"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/ywTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/yarn_weight"
                            android:textColor="@color/headline_color"
                            android:textSize="19sp"
                            android:textStyle="bold|normal" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:alpha=".4"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/projectDescTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/project_description"
                            android:textColor="@color/headline_color"
                            android:textSize="19sp"
                            android:textStyle="bold|normal" />


                    </LinearLayout>

                    <Button
                        android:id="@+id/AddNewPartButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_new_part"
                        android:textSize="14sp" />


                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/partRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    tools:listitem="@layout/project_part_item"/>

            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</RelativeLayout>


