<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".Views.AddDataFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageUser"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:elevation="8dp"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_camera"
                    android:tint="@color/iconTintColor"
                    app:shapeAppearanceOverlay="@style/Circular"
                    app:strokeColor="@color/iconTintColor"
                    app:strokeWidth="2dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha=".4"
                    android:background="@android:color/darker_gray" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/project_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/projectNameEdt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold|normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10.0">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="5"
                        android:hint="@string/hook_size">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/hookSizeEdt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="12"
                            android:inputType="number"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold|normal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="5"
                        android:hint="@string/needle_size">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/needleSizeEdt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="number"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold|normal" />
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/yarn_weight">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ywEdt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="25"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold|normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:layout_gravity="start|top"
                    android:layout_margin="5dp"
                    android:gravity="start|top"
                    android:hint="@string/project_description">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/projectDesEdt"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_gravity="start|top"
                        android:gravity="start|top"
                        android:inputType="textPersonName"
                        android:maxLines="6"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold|normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/addInfoBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:elevation="15dp"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/submit"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold|normal"
                        app:backgroundTint="@color/purple_500"
                        app:shapeAppearanceOverlay="@style/Button8" />

                    <Button
                        android:id="@+id/cancelBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:elevation="15dp"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        android:textColor="@color/purple_500"
                        android:textSize="16sp"
                        android:textStyle="bold|normal"
                        app:backgroundTint="@color/white"
                        app:shapeAppearanceOverlay="@style/Button8" />


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</RelativeLayout>



